tests/baselines/reference/restElementWithBindingPattern2.errors.txt
tests/cases/conformance/es6/destructuring/restElementWithBindingPattern2.ts(1,16): error TS2339: Property 'b' does not exist on type 'number[]'.


==== tests/cases/conformance/es6/destructuring/restElementWithBindingPattern2.ts (1 errors) ====
    var [...{0: a, b }] = [0, 1];
                   ~
!!! error TS2339: Property 'b' does not exist on type 'number[]'.